cp: 	PR c++/11957 	* cp-tree.h (finish_stmt_expr): Add bool parameter. 	* init.c (finish_init_stmts): Pass true to finish_stmt_expr. Don't 	adjust the stmt_expr here. 	(build_vec_init): Use finish_stmt_expr_expr, convert result to 	array type. 	* parser.c (cp_parser_primar_expression): Adjust finish_stmt_expr 	call. 	* pt.c (tsubst_copy): Likewise. 	* semantics.c (finish_stmt_expr): Add parameter. testsuite: 	PR c++/11957 	* g++.dg/warn/noeffect1.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@70541 138bc75d-0d04-0410-961f-82ee72b054a4